--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,12 @@
 
 @import "https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css";
 
+*::selection {
+  /* @apply dark:bg-grassDark-10 dark:text-neutralDark-1; */
+  /* @apply rx-bg-green-6 rx-text-green-11; */
+  @apply rx-bg-grass-6 rx-text-grass-11;
+}
+
 /* Base font family */
 body {
   @apply font-sans;
